--- a/src/main/resources/static/css/loginPageStyle.css
+++ b/src/main/resources/static/css/loginPageStyle.css
@@ -132,6 +132,29 @@ main {
     color: rgb(44, 62, 80);
     text-decoration: underline;
 }
+.error-message,
+.success-message {
+    display: block;
+    margin-bottom: 15px;
+    padding: 10px 15px;
+    border-radius: 5px;
+    font-size: 1rem;
+    text-align: left;
+    width: 100%;
+    box-sizing: border-box;
+}
+
+.error-message {
+    background-color: #ffe6e6;
+    color: #c0392b;
+    border: 1px solid #e74c3c;
+}
+
+.success-message {
+    background-color: #e6ffe6;
+    color: #27ae60;
+    border: 1px solid #2ecc71;
+}
 @media screen and (max-width: 620px) {
     .login-container {
         width: 90%;
